# PyElastica

./: README.md
backend/src/: CMakeLists.txt
backend/src/Systems/States/Expressions/backends/: Declarations.hpp  blaze.hpp
backend/src/Systems/States/Expressions/backends/blaze/: Resize.hpp  SO3PrimitiveAddAssign.hpp  SO3PrimitiveAssign.hpp  Size.hpp
backend/src/Systems/States/Expressions/backends/blaze/SO3PrimitiveAddAssign/: BaseTemplate.hpp  SIMD.hpp  Scalar.hpp
backend/src/Systems/common/Traits/DataType/: CMakeLists.txt
backend/src/Systems/common/Traits/DataType/BlazeBackend/: DataTypeTraits.hpp  MatrixTag.hpp  TensorTag.hpp  VectorTag.hpp
backend/src/Utilities/Math/: Zero.hpp
backend/src/Utilities/Math/BlazeDetail/: BlazeCalculus.hpp  BlazeLinearAlgebra.hpp  BlazeRotation.hpp
backend/src/Utilities/Math/Python/: Bindings.cpp  BlazeIndexSubVector.cpp  BlazeIndexVector.cpp  BlazeMatrix.cpp  BlazeSubmatrix.cpp  BlazeSubtensor.cpp  BlazeSubvector.cpp  BlazeTensor.cpp  BlazeVector.cpp  CMakeLists.txt  SliceHelpers.hpp  SubVectorHelpers.hpp
elastica/rod/: factory_function.py
